# Ranking-API

./: Cargo.toml  DockerFile  Rocket.toml
sql/: v000__init.sql
src/: main.rs
src/controller/: app.rs
src/dao/: app_dao.rs  mod.rs
src/model/: request.rs  response.rs
